--- a/package.json
+++ b/package.json
@@ -41,8 +41,15 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "copy-to-clipboard": "^3.3.1",
+    "framer-motion": "^3.6.1",
+    "js-beautify": "^1.13.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-icons": "^4.2.0"
   }
 }
