--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,6 @@
   "description": "This hunts network requests and collects them in the box. Then you can check hunted requests as test code or json format.",
   "version": "1.0",
   "manifest_version": 3,
-  "background": {
-    "service_worker": "./background.js"
-  },
-  "permissions": ["webRequest"],
-  "action": {
-    "default_popup": "popup.html"
-  },
-  "options_page": "./options.html",
-  "host_permissions": ["*://*/*"]
+  "permissions": [],
+  "devtools_page": "devtools.html"
 }
