🚀 활성/비활성 옵션 추가, 스타일 수정

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,19 @@
   "description": "This chrome extension collects network requests and you can copy them into test code or json format.",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": [],
+  "permissions": ["storage"],
   "devtools_page": "devtools.html",
-  "icons": { "16": "icon16.png", "48": "icon48.png", "128": "icon128.png" }
+  "icons": { "16": "icon16.png", "48": "icon48.png", "128": "icon128.png" },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icon16.png",
+      "32": "icon32.png",
+      "48": "icon48.png",
+      "128": "icon128.png"
+    }
+  },
+  "background": {
+    "service_worker": "background.js"
+  }
 }
